--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         <div class="container">
             <img src="profile.png" alt="Raushan Shrivastwa img" height="250px" width="250px">
             <h1>About Me</h1>
-			<h2>I am Raushan Shrivastwa.</h2>
-			<h2>I am Student at Vellore Institute Of Technology, Andhra Pradesh.</h2>
-            <h2>I am a Passionate Web Developer.</h2>
+		<h2>I am Raushan Shrivastwa.</h2>
+		<h2>I am Student at Vellore Institute Of Technology, Andhra Pradesh.</h2>
+            	<h2>I am a Passionate Web Developer.</h2>
         </div>
     </section>
 
@@ -33,7 +33,7 @@
             <div class="project">
                 <img src="project1.png" alt="Project 1">
                 <h2>Project</h2>
-                <p>A Simple Website for converting Length from one Unit to another Unit </p>
+                <p>A Simple Website for converting Length from one Unit to another Unit using HTML, CSS and JavaScript.</p>
             </div>
     </section>
 
